Mon May 2 07:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/RTComponentServer/RTConfig_Manager.cpp:
        * tools/Assembly_Deployer/Assembly_Impl.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
        * DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp:
        * DAnCE/ciao/Dynamic_Component_Servant_T.cpp:
          Fixed gcc 4 warnings

Sat May 1 03:11:17 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* ciao/tools/Simple_Component_Server/Simple_Component_Server.cpp:

	  Made a change to fix compile errors.

Sat Apr 30 20:02:10 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* ciao/Container_Impl.cpp:

	  Made a change to fix compile errors.

Sat Apr 30 09:58:05 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>

	* ciao/Container_Base.cpp:
	* ciao/Container_Base.h:
	* ciao/Home_Servant_Impl_T.cpp:
	* ciao/Home_Servant_Impl_T.h:

	  Made changes to the old CIAO infrastructure to support
	  passing and storing of the component instance name from the
	  descriptor XML file and into the component instance.

Thu Apr 28 14:50:05 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Dynamic_Component_Servant_T.cpp:
	* DAnCE/ciao/Dynamic_Component_Servant_T.h:
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp:
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.h:

	  Made changes to the CIAO infrastructure that allows the
	  swapping capability to make use of the component instance
	  name when we create object references.

Wed Apr 27 11:15:12 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Container_Base.cpp:
        * DAnCE/ciao/Container_Base.h:
        * DAnCE/ciao/Container_Impl.cpp:
        * DAnCE/ciao/Deployment_Core.idl:
        * DAnCE/ciao/Home_Servant_Impl_T.cpp:
        * DAnCE/ciao/Home_Servant_Impl_T.h:
        * DAnCE/ciao/Servant_Impl_Base.cpp:
        * DAnCE/ciao/Servant_Impl_Base.h:
