@@ -1,3 +1,12 @@
+Tue May  3 13:05:44 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Changed the generated string (used for object id) which is passed
+          to the port activator constructor and to generate_reference() to
+          be a concatentation of the component instance name and the port
+          name, to ensure uniqueness in any use case.
+
 Mon May 2 07:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tools/RTComponentServer/RTConfig_Manager.cpp:
